k8s/traefik-cors-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-cors
  namespace: default
spec:
  headers:
    accessControlAllowOriginList:
      - "*"
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
      - "PATCH"
      - "OPTIONS"
    accessControlAllowHeaders:
      - "DNT"
      - "User-Agent"
      - "X-Requested-With"
      - "If-Modified-Since"
      - "Cache-Control"
      - "Content-Type"
      - "Range"
      - "Authorization"
    accessControlExposeHeaders:
      - "Content-Length"
      - "Content-Range"
    accessControlAllowCredentials: true
    addVaryHeader: true
