k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend-service
          image: ghcr.io/kitiphol/toktik-frontend:latest@sha256:1726e2a5ce4bb8365a8f4d79c7189cc2e259d0aa1199120aaaa4636182b3c6e0
          ports:
            - containerPort: 3000
          # env:
          #   - name: NODE_ENV
          #     value: "production"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
