k8s/rabbitmq-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-headless
spec:
  clusterIP: None
  selector:
    app: rabbitmq
  ports:
    - name: epmd
      port: 4369
      targetPort: 4369
    - name: cluster
      port: 25672
      targetPort: 25672
